--- a/post.hbs
+++ b/post.hbs
@@ -15,7 +15,7 @@
 			</span>
 			{{else}}
 			<span id="home-button" class="nav-button">
-				<a class="home-button" href="{{@blog.url}}" title="Home"><i class="ic ic-arrow-left"></i> Home</a>
+				<a class="home-button" href="{{@blog.url}}" title="Home"><i class="ic ic-arrow-left"></i> Inicio</a>
 			</span>
 			{{/if}}
 			{{#if @blog.navigation}}
