add twitter feed

--- a/index.hbs
+++ b/index.hbs
@@ -25,9 +25,18 @@
 </header>
 
 <div id="index" class="container">
-
 	<main class="content" role="main">
-	
+		<article class="post">
+			<div class="inner" style="text-align: center">
+
+	            <a class="twitter-timeline"  href="https://twitter.com/InversionPasiva" data-widget-id="687034787895341057">
+	            	No nos pierdas de vista en twitter!
+	            </a>
+	            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+	          
+			</div>
+		</article>
+
 		{{> "loop"}}
 	
 	</main>
