--- a/post.hbs
+++ b/post.hbs
@@ -41,7 +41,7 @@
 			<section class="post-info">
 				
 				<div class="post-share">
-					<a class="twitter" href="https://twitter.com/share?text={{title}}&url={{url absolute="true"}}" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
+					<a class="twitter" href="https://twitter.com/share?text={{title}}&url={{url absolute="true"}}&via=inversionpasiva" onclick="window.open(this.href, 'twitter-share', 'width=550,height=235');return false;">
 						<i class="ic ic-twitter"></i><span class="hidden">Twitter</span>
 					</a>
 					<a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u={{url absolute="true"}}" onclick="window.open(this.href, 'facebook-share','width=580,height=296');return false;">
